# eosim-demo

./: Cargo.toml  README.md
src/: main.rs
src/sir/: death_manager.rs  death_report.rs  global_properties.rs  incidence_report.rs  infection_manager.rs  infection_seeder.rs  mod.rs  person_properties.rs  transmission_manager.rs
test/input/: config.yaml  config_multi.yaml
test/output/: .Rhistory  death_output.R  plot_output.R
