[package]
name = "eosim-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
eosim = { git = "https://github.com/jasonasher/eosim.git", version = "0.1.0" }
fxhash = "0.2.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_yaml = "0.9.34"
threadpool = "1.8.1"
tokio = { version = "1", features = ["full"] }
